Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
   </section>
 
-<!-- Sección "Contacto" -->
+  <!-- Sección "Contacto" -->
   <section id="contacto">
     <h2>Contacto</h2>
     <p>Estamos disponibles para atender tus solicitudes y preguntas. Contáctanos a través de las siguientes opciones:</p>
@@ -60,6 +60,7 @@
       <li>WhatsApp: <a href="https://wa.me/56998043680" target="_blank">Enviar mensaje por WhatsApp</a></li>
       <li>Instagram: <a href="https://www.instagram.com/gruas_rj?igsh=MWNnMTZ1eTY2MTA1aA==" target="_blank">@gruas_rj</a></li>
       <li>Facebook: <a href="https://www.facebook.com/profile.php?id=100090025892145&mibextid=ZbWKwL" target="_blank">Facebook de Grúas RJ</a></li>
+      <li>TikTok: <a href="https://www.tiktok.com/@gruasrj?_t=8rDwgI77BVH&_r=1" target="_blank">@gruasrj</a></li>
     </ul>
   </section>
 
