Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
     </div>
   </div>
 
+  <!-- Sección "Sobre Nosotros" -->
+  <section id="nosotros">
+    <h2>Sobre Nosotros</h2>
+    <p>En <strong>Grúas RJ</strong> somos una empresa dedicada al transporte y servicio de grúas, especializada en soluciones logísticas para todo tipo de vehículos y maquinaria. Desde nuestros inicios en enero de 2023, hemos trabajado incansablemente para ofrecer un servicio rápido, seguro y confiable. Con más de <strong>1.000 servicios realizados</strong>, nos enorgullece la confianza que nuestros clientes han depositado en nosotros, lo que nos ha permitido crecer y seguir innovando en el sector.</p>
+    <p>Nuestro equipo está compuesto por profesionales comprometidos con la excelencia, siempre dispuestos a brindar la mejor atención y soluciones personalizadas para cada necesidad.</p>
+    <p><strong>Grúas RJ</strong> está aquí para ayudarte, estés donde estés, cuando más lo necesites.</p>
+  </section>
+
   <!-- Sección de información y servicios -->
   <section id="servicios" class="info-section">
     <h2>Nuestros Servicios</h2>
